@@ -105,7 +105,6 @@
 /* External Global Data */
 
 extern char	*msg_nosupport;
-extern char     *PBatchReqType[];
 
 extern int       LOGLEVEL;
 
@@ -165,12 +164,23 @@ int dis_request_read(
     return(PBSE_DISPROTO);
     }
 
+  if ((request->rq_type < 0) || (request->rq_type > PBS_BATCH_Disconnect))
+    {
+    sprintf(log_buffer,"invalid request type: %d",
+      request->rq_type);
+
+    LOG_EVENT(PBSEVENT_DEBUG,PBS_EVENTCLASS_REQUEST,"?",
+      log_buffer);
+
+    return(PBSE_DISPROTO);
+    }
+
   /* Decode the Request Body based on the type */
 
   if (LOGLEVEL >= 5)
     {
     sprintf(log_buffer,"decoding command %s from %s",
-      PBatchReqType[request->rq_type],
+      reqtype_to_txt(request->rq_type),
       request->rq_user);
 
     LOG_EVENT(
@@ -346,9 +356,9 @@ int dis_request_read(
 
     default:
 
-      sprintf(log_buffer,"%s: %s from %s", 
+      sprintf(log_buffer,"%s: %d from %s", 
         msg_nosupport, 
-        PBatchReqType[request->rq_type], 
+        request->rq_type, 
         request->rq_user);
 
       LOG_EVENT(
@@ -371,7 +381,7 @@ int dis_request_read(
       sprintf(log_buffer,"req extension bad, dis error %d (%s), type=%s", 
         rc,
         dis_emsg[rc],
-        PBatchReqType[request->rq_type]);
+        reqtype_to_txt(request->rq_type));
 
       LOG_EVENT(
         PBSEVENT_DEBUG, 
@@ -387,7 +397,7 @@ int dis_request_read(
     sprintf(log_buffer,"req body bad, dis error %d (%s), type=%s",
       rc, 
       dis_emsg[rc],
-      PBatchReqType[request->rq_type]);
+      reqtype_to_txt(request->rq_type));
 
     LOG_EVENT(PBSEVENT_DEBUG,PBS_EVENTCLASS_REQUEST,"?",log_buffer);
 
